[package]
name = "ocaml-rs-0_09"
version = "0.1.0"
authors = ["Bruno Deferrari <utizoc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ocaml = "0.9.3"
lazy_static = "1.4"
ocaml-util = { path = "../ocaml-util" }
